<resources>
    <string name="app_name">SpotifyRecs</string>
    <string name="enter_your_second_artist">Enter Your Second Artist…</string>
    <string name="log_in">Log In</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="skip_this_song">Skip This Song</string>
    <string name="covert_art_of_the_current_song">Covert art of the current song</string>
    <string name="play_button_to_hear_a_snippet_of_the_song">Play button to hear a snippet of the song</string>
    <string name="revisit_old_playlists">Revisit Old Playlists!</string>
    <string name="mix_new_playlist">Mix New Playlist!</string>
    <string name="spotify_s_generation_algorithm">Spotify\'s Generation Algorithm!</string>
    <string name="to_export_songs">To Export Songs</string>
    <string name="improved_filtering_system">Improved Filtering System</string>
    <string name="liked_songs">Liked Songs</string>
    <string name="playlist_s_name">Playlist\'s Name:</string>
    <string name="enter">Enter!</string>
    <string name="add_this_playlist">Add this Playlist!</string>
    <string name="navigation">Navigation:</string>
    <string name="home1">Home</string>
    <string name="recommendations">Recommendations:</string>
    <string name="enter_your_first_artist">Enter Your First Artist…</string>
    <string name="mix_your_artists">Mix Your Artists!</string>
    <string name="cover_art_image">Cover art image</string>
    <string name="press_to_hear_snippet_of_music">Press to hear snippet of music</string>
    <string name="press_to_hear_snippet_of_music1">Press to hear snippet of music</string>
    <string name="covert_art_image1">Covert art image</string>
    <string name="click_to_export_this_playlist_to_spotify">Click to export this playlist to Spotify</string>
    <string name="click_to_delete_this_playlist">Click to delete this playlist</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="select_to_see_settings_options_for_algorithms">Select to see settings options for algorithms</string>
    <string name="select_settings_to_choose_recommendations">Select Settings To Choose Recommendations!</string>
</resources>